Added config options for catalina_opts
Added ability to start tomcat service

Updated documentation

Note: need to fix user and group creation, tomcat class tries to do this already.